# epa-consultant

./: .gitignore  README.md  deepeval.txt
backend/: .env.example  .gitignore  README.md  check_citation.py  debug_eval.py  main.py  pyproject.toml  reproduce_issue.py  requirements.txt
backend/api/: __init__.py  routes.py  schemas.py
backend/data/chromadb/: .gitkeep
backend/data/extracted/: 2026-pgp.json  2026-pgp.txt  test_1: research_paper.json  test_2: financial_statement.json
backend/data/processed/: .gitkeep  2026-pgp.json  test_1: research_paper.json  test_2: financial_statement.json
backend/data/raw/: .gitkeep  test.json
backend/data_processing/: README.md  __init__.py  chunker.py  chunking.py  header_correction.py  ingest.py  llm_client.py  metadata_builder.py  models.py  parsing.py  pdf_extractor.py  pdf_parser.py  prompts.py  summarization.py  table_extractor.py  table_splitter.py
backend/data_processing/templates/: document_summary.jinja2  header_correction.jinja2  section_summary.jinja2
backend/ml/: README.md  __init__.py  embeddings.py  hallucination.py  judge.py  rag_pipeline.py  retrieval.py  vector_store.py
backend/scripts/: benchmark_cost_savings.py  manual_rag_test.py  seed_db.py  skeleton_summary_demonstration.py  small_chunks_demonstration.py  test_responses.py  tune_retrieval.py
backend/scripts/benchmarks/: benchmark_adaptive_sampling.py  benchmark_child_dedup.py  benchmark_summarization.py
backend/scripts/pipeline/: extract_tables.py  run_parsing.py  run_pdf_extraction.py  (+1 more)
backend/shared/: README.md  __init__.py  llm_provider.py  schemas.py
backend/tests/: test_embeddings.py  test_rag.py  test_rag_quality.py  test_retrieval.py  test_vector_store.py  verify_hallucination.py
(+61 files in other folders)
