[project]
name = "epa-consultant-backend"
version = "0.1.0"
description = "fastapi backend for querying epa regulatory pdfs using rag"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pymupdf4llm>=0.0.17",
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.54.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pytest>=8.0.0",
    "google-genai>=1.60.0",
    "jinja2>=3.1.6",
    "langchain-text-splitters>=1.1.0",
    "rank-bm25>=0.2.2",
    "deepeval>=1.0.0",
    "sentence-transformers>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "data_processing", "ml"]
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning",
]
